<resources>
    <string name="app_name">Brilhe\nSempre</string>
    <string name="dummy_button">...:: Entrar ::...</string>
    <string name="dummy_content">Locação de Trajes para\nFESTA</string>
    <string name="imgLogo">Logo Marca Brilhe Sempre</string>
    <string name="imgRedes">Redes Sociais</string>
    <string name="btnProximo">....::: Proxímo ::....</string>
    <string name="txtSelecionarRedeSocial">...:: Encontre nossa Rede Social!!!</string>
    <string name="title_activity_home_loja">HomeLoja</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>