<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DD120011"
    android:theme="@style/ThemeOverlay.BrilheSempre.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- A visualização principal em tela cheia. Isso pode ser substituído por qualquer visão
             é necessário para apresentar seu conteúdo, por exemplo Visualização de vídeo, Visualização de superfície,
             TextureView, etc. -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Este FrameLayout insere seus filhos com base nas janelas do sistema usando
             android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.BrilheSempre.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#81817C"
                android:text="@string/dummy_button"
                android:textColor="#000000" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_gravity="top|center_vertical"
            android:layout_margin="10dp"
            android:contentDescription="@string/imgLogo"
            app:srcCompat="@drawable/logo6" />
    </FrameLayout>

</FrameLayout>